--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  fbf:
+    path: ../packages/fbf
   archive: ^2.0.13
   color_thief_flutter: ^1.0.2
   csv: ^4.1.0
