--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   fbf:
     path: ../packages/fbf
   archive: ^2.0.13
+  charts_painter: ^1.0.0
   color_thief_flutter: ^1.0.2
   csv: ^4.1.0
   file_picker: ^2.1.6
