--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter        
   fbf:
     path: ../packages/fbf
   archive: ^2.0.13
@@ -34,8 +36,10 @@ dependencies:
   flutter_highlight: ^0.6.0
   hive: ^1.4.4+1
   hive_flutter: ^0.3.1
+  intl: ^0.17.0
   kdtree: ^0.1.0
   line_awesome_flutter: ^1.0.1
+  numberpicker: ^2.0.0
   provider: ^4.3.3
   url_launcher: ^5.7.10
   uuid: ^2.2.2
@@ -56,6 +60,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
