--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   file_picker: ^2.1.6
   flutter_colorpicker: ^0.3.5
   flutter_highlight: ^0.6.0
+  flutter_sticky_header: ^0.5.0
   hive: ^1.4.4+1
   hive_flutter: ^0.3.1
   intl: ^0.17.0
