--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   intl: ^0.17.0
   kdtree: ^0.1.0
   line_awesome_flutter: ^1.0.1
+  modal_bottom_sheet: ^2.0.0
   numberpicker: ^2.0.0
   provider: ^4.3.3
   url_launcher: ^5.7.10
